--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=rest
 
-spring.datasource.url=jdbc:mysql://localhost:3306/placement
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://db.vkohrbtrnaxbunzxjlpx.supabase.co:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=Hanuman@105
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
